Keep share-code encoding compatible with API 26